style.css
@font-face {
    font-family: 'liberation';
    src: url('lib/LiberationSans-Regular-webfont.woff') format('woff');
    font-weight: normal;
    font-style: normal;
}

/* ===============
        GLOBAL
   =============== */

body {
    background-color: #1f1f1f;
    font-size: 1.5em; /* change this to zoom page */
}

:focus {
    outline: none;
}
::-moz-focus-inner {
    border: 0;
}

.dim {
    opacity: 0.5;
}
.grey {
    filter: brightness(50%);
}

/* ===============
    TASK LAYOUT
   =============== */

#task,
#spinner,
#spinnerDynalist {
    width: 100%;
    text-align: center;
    color: white;
    font-family: liberation;
    font-size: 2em;
}
#spinner > img {
    object-fit: none;
    object-position: center -0.5em;
    height: 3em;
}
#spinner > p.status {
    color: #e44332 !important;
    font-size: 0.35em !important;
}

#task a {
    color: #e44332;
}

#task > p {
    font-size: 0.65em;
    margin: 1em 2em;
}

.projectName {
    font-size: 1.5em;
}

.projectName:nth-child(3) {
    margin-top: 1em;
    font-size: 0.75em;
}

#backToProjects {
    cursor: pointer;
    margin-left: -0.25em;
}

.mainTask > p {
    font-size: 1.25em;
    margin-block: 0;
    margin-block-start: 0;
    margin-block-end: 0;
    padding: 0% 10%;
    text-underline-offset: 0.15em;
}

#dueTasksInProject {
    /* "X tasks remaining in context" */
    font-size: 0.4em;
    color: grey;
    font-style: italic;
    text-align: right;
    padding-right: 24%;
}

/* ===============
        BUTTONS
   =============== */

.taskButtons {
    margin-top: 0.13em;
}

button {
    background-color: #e44332;
    border-radius: 3px !important;
    border: 2px solid #e44332;
    color: #fff;
    padding: 0.55em;
    font-weight: bold;
    font-size: 0.5em;
    cursor: pointer;
    margin: 15px;
    line-height: 0.9em;
}

button.important {
    background-color: #4073d6 !important;
    border: 2px solid #4073d6 !important;
}

button b {
    font-size: 3em;
}

button > small {
    font-size: 0.75em;
}

.priorityButton {
    font-size: 0.5em;
}

.taskLinkButton > a {
    margin-left: 0.1em;
}

.roundbutton {
    font-size: 0.75em;
    color: white !important;
    text-align: center;
    line-height: 1.4em;
    border-radius: 50%;
    text-decoration: none;
    padding: 0.15em 0.3em;
    margin-left: 0.25em;
}
.roundbutton > svg {
    vertical-align: middle;
    stroke-width: 2;
}

.doneButton {
    background: #299438;
}
.deferButton {
    background: #e44332;
}

/* ===============
        COMMENTS
   =============== */

.taskComments {
    border: 1px solid white;
    width: 50%;
    margin: auto;
    margin-top: 0.5em !important;
    text-align: justify;
    padding: 0.5em;
    padding-bottom: 0.25em;
    font-size: 0.75em;
}

.nobullets {
    list-style-type: none;
    margin-left: -0.5em !important;
}

.nobullets > li {
    text-indent: 0;
    margin-left: 2.25em;
}

li.nobullets > ul {
    padding-left: 0;
    margin-left: 1.5em;
}

ul:not(.nobullets) {
    margin-left: 0;
}

ul:not(.nobullets) > li {
    text-indent: 0;
}

.taskComment > ul {
    margin-top: 0.25em;
    margin-bottom: 0.25em;
}

.taskComment * img {
    max-width: 95%;
}

/* ===============
        DYNALIST
   =============== */

#dynalistAuthSubmit {
    display: inline;
    margin-left: 1em;
}

#dynalistmenu {
    text-align: center !important;
}

#dynalistmenu > button {
    margin: 0;
    border-radius: 0 !important;
}

#dynalistmenu > button:hover {
    background-color: #a73124;
    border-color: #a73124;
}

#dynalistmenu > button:first-of-type {
    border-top-left-radius: 0.25em !important;
    border-bottom-left-radius: 0.25em !important;
}

#dynalistmenu > button:last-of-type {
    border-top-right-radius: 0.25em !important;
    border-bottom-right-radius: 0.25em !important;
}

.dynalistMenuButton > span {
    padding: 0em 0.6em;
}

.dynalistLink {
    margin-left: 0.25em;
    cursor: pointer;
}

.taskComment * table {
    border: 5px double white;
    width: 119%;
    margin-left: -3.18em;
    margin-bottom: 0.5em;
}
.taskComment * thead {
    border-bottom: 5px solid white;
}
.taskComment * th,
.taskComment * td {
    border-right: 1px solid grey;
    border-bottom: 1px solid grey;
    padding-left: 0.25em;
}

#parentnote {
    font-size: 0.65em;
    border: 1px grey solid;
    margin-top: 0.5em;
}
#parentnote > p {
    margin: 0;
    padding: 0.3em;
}

.donechecklist,
.donerotating,
.doneproject {
    position: absolute;
    margin-top: 0em;
    margin-left: -4.5em;
    padding: 0.3em 0.65em;
}

.projectParent {
    font-style: italic;
    margin-left: 0em;
}

.projectTask {
    font-style: normal;
    margin-left: 1em;
}

/* ===============
    PROJECT LIST
   =============== */

.suggest {
    width: 11em;
    position: relative;
    letter-spacing: 0.1em;
}

/* https://codepen.io/mike-schultz/pen/NgQvGO */
.chosen {
    --borderWidth: 0.15em;
    background: #1d1f20 !important;
    border: none;
    position: relative;
    border-radius: var(--borderWidth);
}

.chosen:after {
    content: '';
    position: absolute;
    top: calc(-1 * var(--borderWidth));
    left: calc(-1 * var(--borderWidth));
    height: calc(100% + var(--borderWidth) * 2);
    width: calc(100% + var(--borderWidth) * 2);
    background: linear-gradient(
        60deg,
        #f79533,
        #f37055,
        #ef4e7b,
        #a166ab,
        #5073b8,
        #1098ad,
        #07b39b,
        #6fba82
    );
    border-radius: calc(2 * var(--borderWidth));
    z-index: -1;
    animation: animatedgradient 3s ease alternate infinite;
    background-size: 300% 300%;
}

@keyframes animatedgradient {
    0% {
        background-position: 0% 50%;
    }
    50% {
        background-position: 100% 50%;
    }
    100% {
        background-position: 0% 50%;
    }
}

.chosen > .badge {
    color: white !important;
}

#activityDisplay {
    height: 2em;
    font-size: 0.22em;
    width: 25em;
    display: inline-flex;
    justify-content: space-between;
    align-items: center;
    outline: 1px #8c8c8c dashed;
    color: #8c8c8c;
    outline-offset: -2.5px;
    margin-left: 0.25em;
}

#activityDisplay > div:first-child {
    border-top-left-radius: 3px;
    border-bottom-left-radius: 3px;
}

#activityDisplay > div:last-child {
    border-top-right-radius: 3px;
    border-bottom-right-radius: 3px;
}

#activityDisplay > div {
    flex-basis: 1em;
    overflow: hidden;
    white-space: nowrap;
    z-index: 1;
}

#activityDisplay * p {
    color: white;
    padding: 0.15em 0.25em;
    margin: 0;
}

.projectLink,
.projectLinkMobile {
    text-decoration: none;
    font-size: 0.25em;
    position: absolute;
    margin-left: -0.25em;
    margin-top: 3em;
    opacity: 50%;
}

.projectLinkMobile,
.taskLinkMobile {
    display: none;
}

.badge {
    position: absolute;
    font-size: 0.7em;
    background: #1f1f1f;
    color: #e44332;
    width: 1.75em;
    height: 1.5em;
    text-align: center;
    border-radius: 50%;
    top: -1em;
    right: -1em;
    text-decoration: none;
}
.badge[data-badge]:after {
    content: attr(data-badge);
    position: absolute;
    font-size: 1em;
    background: #1f1f1f;
    color: #e44332;
    width: 1.5em;
    height: 1.5em;
    text-align: center;
    line-height: 1.4em;
    border-radius: 50%;
    margin-left: 0.25em;
}

/* ===============
    DEFER DIALOG
   =============== */

.tingle-modal-box__content {
    display: none;
}

.tingle-modal-box {
    width: 64em !important;
}

.tingle-modal-box__footer {
    background-color: #353535 !important;
}

.tingle-modal-box__footer > button {
    width: 19.5em;
    margin-top: 1.5em;
    font-size: 0.75em;
}

/* ===============
        MOBILE
   =============== */

@media only screen and (max-width: 600px) {
    body {
        font-size: 1.25em; /* change this to zoom page */
    }

    .tingle-modal-box__footer > button {
        width: 4em;
        margin-top: 0.25em !important;
    }
    .tingle-modal-box {
        width: 100% !important;
        text-align: center;
    }

    .mainTask > p {
        margin-top: 0;
        padding: 0;
    }

    #dueTasksInProject {
        margin-top: 1em;
        padding-bottom: 0em;
    }

    .roundbutton > svg {
        margin-top: 0em;
    }

    .taskComments {
        width: 90% !important;
        margin-top: 1em !important;
    }

    .projectLink,
    .taskLink {
        display: none !important;
    }

    .projectLinkMobile,
    .taskLinkMobile {
        display: inline !important;
    }

    #dynalistmenu {
        font-size: 0.8em;
    }
    .dynalistMenuButton {
        margin: 0.25em;
    }
    .dynalistMenuButton > span {
        display: block;
        font-size: 0.85em;
    }
}

